Implement GraphQL Relay spec by gqlgen-relay (wip)

--- a/server/gqlgen.yml
+++ b/server/gqlgen.yml
@@ -54,3 +54,8 @@ models:
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
       - github.com/99designs/gqlgen/graphql.Int32
+  PageInfo:
+    model: gitlab.com/hookactions/gqlgen-relay/relay.PageInfo
+  Node:
+    model: gitlab.com/hookactions/gqlgen-relay/relay.Node
+
